TM-12000 Attend PR comments
Add class to describe an action button

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/tds-checkbox/tds-checkbox.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/tds-checkbox/tds-checkbox.component.html
@@ -1,3 +1,3 @@
 <div class="tds-checkbox-component">
-	<input id="tdsCheckboxComponent" type="checkbox" #tdsCheckbox (change)="onChange()" style="cursor: pointer" />
+	<input class="component-action-change" type="checkbox" #tdsCheckbox (change)="onChange()" style="cursor: pointer" />
 </div>
