--- a/web-app/tds/web-app/css/elements/component/field-settings-grid-component.sass
+++ b/web-app/tds/web-app/css/elements/component/field-settings-grid-component.sass
@@ -5,3 +5,7 @@
   field-settings-grid
     span.k-icon
       margin-left: 0px !important
+  .text-delimited
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
