--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -40,3 +40,13 @@
   .k-grid-content-locked, .k-grid-header-locked
     border-right-width: 5px
     border-right-color: #ebebeb
+
+  .k-grid-header .k-header
+    vertical-align: top
+
+  .sortable-column
+    width: 90%
+
+  .text-delimited
+    white-space: normal;
+    word-wrap: break-word;
