TM-12401 Fix  ESC key to close the Sample Data window is not working

--- a/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-sample-data/data-script-sample-data.component.html
+++ b/web-app/tds/web-app/app-js/modules/dataIngestion/components/data-script-sample-data/data-script-sample-data.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in" id="loadSampleData" data-backdrop="static" tabindex="-1" role="dialog">
+<div class="modal fade in" id="loadSampleData" data-backdrop="static" tabindex="-1" role="dialog" tds-handle-escape (escPressed)="cancelCloseDialog()">
 	<div class="modal-dialog modal-md" role="document">
 		<div class="modal-content" style="width: 650px;">
 			<div class="modal-header">
