--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
@@ -6,7 +6,7 @@
                  [popupClass]="'content popup'"
                  [offset]="popup.offset"
                  [positionMode]="popup.position">
-        <div style="border: 1px solid #656565; min-width: 300px;">
+        <div style="border: 1px solid #656565; min-width: 300px; max-height: 250px; overflow-y: scroll;">
             <div style="padding-top: 5px;padding-right: 3px;background-color: #5f9fcf;display:  inline-block;padding-left: 10px;width:  100%;">
                 <label style="float: left;display: inline;padding-right: 0;color: #ffffff;">
                     {{popup.title}}
@@ -15,15 +15,16 @@
                    class="glyphicon glyphicon-remove" (click)="popup.show=false"></i>
             </div>
             <div style="padding: 15px 15px 15px 15px;">
-                <kendo-grid [data]="popupGridData" style="width: 300px;"
+                <kendo-grid [data]="popupGridData" style="width: 400px;"
                             [groupable]="false" [group]="popupGridGroups">
-                    <kendo-grid-column [title]="'Domain'" field="domain" [width]="1">
-                        <ng-template kendoGridGroupHeaderTemplate let-group let-field="field" let-value="value">
-                            Domain: {{value}}
+                    <kendo-grid-column [title]="'Domain'" field="domainIndex" [width]="1">
+                        <ng-template kendoGridGroupHeaderTemplate let-group let-field="field" let-value="value" let-group="group">
+                            Domain: {{group.items[0].domainName}}
                         </ng-template>
                     </kendo-grid-column>
                     <kendo-grid-column [title]="'Field Name'" field="fieldName"></kendo-grid-column>
                     <kendo-grid-column [title]="'Value'" field="value"></kendo-grid-column>
+                    <kendo-grid-column *ngIf="popup.type === FieldInfoType.FIND" [title]="'Results'" field="results" [width]="100"></kendo-grid-column>
                 </kendo-grid>
             </div>
         </div>
@@ -97,7 +98,7 @@
             <ng-template kendoGridCellTemplate let-dataItem>
                 <i *ngIf="dataItem.create" (click)="onShowPopup($event, FieldInfoType.CREATE, dataItem)" title="View Create Reference Detail" class="fa fa-plus-square" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
                 <i *ngIf="dataItem.update" (click)="onShowPopup($event, FieldInfoType.UPDATE, dataItem)" title="View Update Reference Detail" class="fa fa-pencil-square" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
-                <i *ngIf="dataItem.find" (click)="onShowPopup($event, FieldInfoType.FIND, dataItem)" title="View Find Results" class="fa fa-search" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
+                <i *ngIf="dataItem.find && dataItem.find.query.length > 0" (click)="onShowPopup($event, FieldInfoType.FIND, dataItem)" title="View Find Results" class="fa fa-search" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
             </ng-template>
         </kendo-grid-column>
 
