TM-12067 Increase the length of the tag value box on the cookbook page

--- a/web-app/css/page/module/tasks/cookbook.sass
+++ b/web-app/css/page/module/tasks/cookbook.sass
@@ -3,9 +3,17 @@
   .container-fluid
     padding-left: 0px
   .tm-asset-tag-selector-container
-    width: 350px
     label
       display: block
+    .asset-tag-selector-component
+      max-width: unset
+      width: 100%
+      .k-widget
+        width: 100%
+        max-width: unset
+        .k-multiselect-wrap
+          ul
+            max-width: 90%
   .settings-container
     padding-top: 28px
   .settings-container.recipe-editor
