TM-10053 * Get rid of all inline style and move it to SaSS * Esc on exit on the popup field info

--- a/web-app/tds/web-app/css/elements/forms/forms.sass
+++ b/web-app/tds/web-app/css/elements/forms/forms.sass
@@ -188,3 +188,11 @@ kendo-dropdownlist
   &.form-control
     &.error, &.has-error
       border: 1px #f00 solid
+
+// invisible button style for exit on esc key help.
+button.invisible-button
+  background-color: transparent
+  border: 0
+  cursor: default
+button.invisible-button:focus
+    outline: 0
