--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-fields.component.html
@@ -1,52 +1,49 @@
 <div class="import-batch-record-fields-component fields-container row" *ngIf="fieldsInfo">
 
     <!-- Fields Info Popup -->
-    <kendo-popup #infoPopup *ngIf="popup.show"
+    <kendo-popup #infoPopup *ngIf="popup.show" class="fields-info-popup"
                  [margin]="popup.margin"
                  [popupClass]="'content popup'"
                  [offset]="popup.offset"
                  [positionMode]="popup.position">
-        <div style="border: 1px solid #656565;">
-            <div style="padding-top: 5px;padding-right: 3px;background-color: #5f9fcf;display:  inline-block;padding-left: 10px;width:  100%;">
-                <label style="float: left;display: inline;padding-right: 0;color: #ffffff;">
+        <div class="popup-content" tds-handle-escape (escPressed)="popup.show=false">
+            <div class="popup-header">
+                <button #focusElement autofocus class="invisible-button"></button>
+                <label>
                     {{popup.title}}
                 </label>
-                <i style="float: right;cursor: pointer;font-size: smaller;color: #ffffff;display: inline;margin-top: 5px;margin-right:  5px;"
-                   class="glyphicon glyphicon-remove" (click)="popup.show=false"></i>
+                <i class="glyphicon glyphicon-remove" (click)="popup.show=false"></i>
             </div>
-            <div style="padding: 5px 15px 15px 15px;">
+            <div class="popup-body">
 
                 <!-- Find Type-->
-                <div *ngIf="popup.type === FieldInfoType.FIND">
-                    <kendo-grid
-                                style="width: 400px;" [style.maxHeight.px]="200"
-                                [data]="popupGridData"
+                <div class="find-field-info" *ngIf="popup.type === FieldInfoType.FIND">
+                    <kendo-grid [data]="popupGridData"
                                 [groupable]="false" [group]="popupGridGroups">
                         <kendo-grid-column [title]="'Domain'" field="domainIndex" [width]="1">
                             <ng-template kendoGridGroupHeaderTemplate let-field="field" let-value="value" let-group="group">
-                                <span style="width: 50%">Domain: {{group.items[0].domainName}}</span>
+                                <span class="domain-group-header">Domain: {{group.items[0].domainName}}</span>
                                 <span *ngIf="group.items[0].recordsFound">Records Found: {{group.items[0].recordsFound}}</span>
                             </ng-template>
                         </kendo-grid-column>
                         <kendo-grid-column [title]="'Field Name'" field="fieldName"></kendo-grid-column>
                         <kendo-grid-column [title]="'Value'" field="value"></kendo-grid-column>
                     </kendo-grid>
-                    <div style="margin-top: 5px;">
-                        <label style="font-size: 13px;">Results:</label>
+                    <div class="footer-results">
+                        <label>Results:</label>
                         <span *ngIf="popup.results">
-                            <span *ngFor="let id of popup.results" class="badge" style="margin-right: 2px;">{{id}}</span>
+                            <span *ngFor="let id of popup.results" class="badge">{{id}}</span>
                         </span>
                         <span *ngIf="!popup.results"><i>No results found</i></span>
                     </div>
                 </div>
 
                 <!-- Create/Update Type-->
-                <div *ngIf="popup.type === FieldInfoType.CREATE || popup.type === FieldInfoType.UPDATE">
+                <div class="create-update-field-info" *ngIf="popup.type === FieldInfoType.CREATE || popup.type === FieldInfoType.UPDATE">
                     <div>
-                        <label style="font-size: 13px;">Domain: {{popup.domain}}</label>
+                        <label>Domain: {{popup.domain}}</label>
                     </div>
-                    <kendo-grid style="width: 300px;" [style.maxHeight.px]="200"
-                                [data]="popupGridData">
+                    <kendo-grid [data]="popupGridData">
                         <kendo-grid-column [title]="'Field Name'" field="fieldName"></kendo-grid-column>
                         <kendo-grid-column [title]="'Value'" field="value"></kendo-grid-column>
                     </kendo-grid>
@@ -122,9 +119,13 @@
         </kendo-grid-column>
         <kendo-grid-column title="Reference" [width]="80">
             <ng-template kendoGridCellTemplate let-dataItem>
-                <i *ngIf="dataItem.create" (click)="onShowPopup($event, FieldInfoType.CREATE, dataItem)" title="View Create Reference Detail" class="fa fa-plus-square" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
-                <i *ngIf="dataItem.update" (click)="onShowPopup($event, FieldInfoType.UPDATE, dataItem)" title="View Update Reference Detail" class="fa fa-pencil-square" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
-                <i *ngIf="dataItem.find && dataItem.find.query.length > 0" (click)="onShowPopup($event, FieldInfoType.FIND, dataItem)" title="View Find Results" class="fa fa-search" style="cursor: pointer; font-size: 17px; margin-right: 5px;"></i>
+                <i *ngIf="dataItem.create" (click)="onShowPopup($event, FieldInfoType.CREATE, dataItem)"
+                   title="View Create Reference Detail" class="field-info-icon fa fa-plus-square"></i>
+                <i *ngIf="dataItem.update" (click)="onShowPopup($event, FieldInfoType.UPDATE, dataItem)"
+                   title="View Update Reference Detail" class="field-info-icon fa fa-pencil-square"></i>
+                <i *ngIf="dataItem.find && dataItem.find.query.length > 0"
+                   (click)="onShowPopup($event, FieldInfoType.FIND, dataItem)"
+                   title="View Find Results" class="field-info-icon fa fa-search"></i>
             </ng-template>
         </kendo-grid-column>
 
