--- a/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-md" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
+                <button (click)="cancelCloseDialog()" type="button" class="close component-action-close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
                 <h4 class="modal-title">Create Person</h4>
@@ -107,14 +107,14 @@
 				                                [valueField]="'id'"
 				                                [data]="teams[index].data">
 		                                </kendo-dropdownlist>
-		                                <span class="glyphicon glyphicon-remove remove-team" (click)="removeTeam(index)"></span>
+		                                <span class="glyphicon glyphicon-remove remove-team component-action-remove-team" (click)="removeTeam(index)"></span>
 	                                </div>
 
                                 </div>
                             </div>
 	                        <div class="form-group">
                                 <div class="col-md-3"></div>
-                                <div class="col-md-9"><button (click)="addTeam()">Add Team</button></div>
+                                <div class="col-md-9"><button (click)="addTeam()" class="component-action-add-team">Add Team</button></div>
                             </div>
                         </div>
                     </form>
@@ -123,11 +123,11 @@
             <div class="modal-footer form-group-center">
                 <button type="button"
                         [disabled]="!canSave()"
-                        class="btn btn-primary pull-left" (click)="save()"><span
+                        class="btn btn-primary pull-left component-action-save" (click)="save()"><span
                         class="fa fa-fw fa-floppy-o"></span> Save
                 </button>
                 <button type="button"
-                        class="btn btn-default pull-right" (click)="cancelCloseDialog()">
+                        class="btn btn-default pull-right component-action-cancel" (click)="cancelCloseDialog()">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Cancel</span>
                 </button>
