TM-9945 * QA Rejection Fix

--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -23,6 +23,7 @@
 @import "module/fieldSettings/asset-explorer"
 @import "module/importBatch/import-batch-list-component"
 @import "module/importBatch/import-batch-detail-dialog-component"
+@import "module/importBatch/import-batch-record-dialog.component"
 @import "module/importBatch/import-batch-record-summary-component"
 @import "module/importBatch/import-batch-record-fields-component"
 @import "module/importBatch/import-assets.component"
