--- a/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-dialog.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/record/import-batch-record-dialog.component.html
@@ -1,19 +1,4 @@
-<style>
-    .modal-content {
-        width: 1065px;
-    }
-    .modal-title {
-        float: left;
-    }
-    .tool-box {
-        float: right;
-    }
-    .modal-body {
-        height: 650px;
-        overflow: auto;
-    }
-</style>
-<div class="modal fade in tds-ui-modal-decorator" id="import-batch-record-dialog" data-backdrop="static" tabindex="-1" role="dialog">
+<div class="modal fade in tds-ui-modal-decorator import-batch-record-dialog" id="import-batch-record-dialog" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content resizable"
              tds-ui-modal-decorator=""
