TM-10809 Fix issue trying go to the bottom after creating a person

--- a/web-app/tds/web-app/css/elements/component/task-comment-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-comment-component.sass
@@ -1,4 +1,7 @@
 .task-comment-component
+  .task-comment-grid
+    .k-grid-header.k-grid-dynamic-header
+      position: relative
   .task
     margin-right: 30px
   .form-check-label
