--- a/web-app/tds/web-app/css/shared/components/tds-supports-depends.sass
+++ b/web-app/tds/web-app/css/shared/components/tds-supports-depends.sass
@@ -4,3 +4,5 @@
       padding: 1.5rem 0.75rem
   .action-button-list
     width: 100px
+  .k-grid-header.k-grid-dynamic-header
+    position: relative
