TM-12003 Finished the view implementation on the Legacy List Views.

--- a/web-app/css/elements/support/jqgrid.sass
+++ b/web-app/css/elements/support/jqgrid.sass
@@ -44,3 +44,7 @@ div.content-wrapper
               box-sizing: initial !important
               span
                 box-sizing: initial !important
+              div.asset-tag-selector-component-content
+                span
+                  height: 20px
+                  margin-top: 3px
