--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -264,9 +264,13 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
-                <button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
+                <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Cancel</span>
+                </button>
+                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete pull-left">
+                    <span  class="glyphicon glyphicon-trash"></span>
+                    <span>Delete</span>
                 </button>
             </div>
         </div>
