--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -15,7 +15,7 @@
 			</div>
 			<div class="checkbox just-planning">
 				<input id="justPlanning" type="checkbox" (change)="onChangeJustPlanning($event.currentTarget.checked)"
-				       [(ngModel)]="justPlanning" name="justPlanning">
+				       [(ngModel)]="justPlanning" name="justPlanning" class="component-action-just-planning">
 				<label>Just Planning</label>
 			</div>
 		</div>
