TM-11994 > ETL Designer: Problems handling .txt files * Removed .txt from the allowed file extensions * Added file restrictions to import assets file uploader.

--- a/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
+++ b/web-app/tds/web-app/app-js/modules/importBatch/components/import-assets/import-assets.component.html
@@ -49,6 +49,7 @@
                             <div class="col-sm-{{ (uiConfig.inputColSize + uiConfig.buttonColSize) }}" style="padding-right: 0;">
                                 <kendo-upload
                                         #kendoUploadInstance="kendoUpload"
+                                        [restrictions]="file.uploadRestrictions"
                                         [autoUpload]="file.autoUpload"
                                         [saveUrl]="file.uploadSaveUrl"
                                         [removeUrl]="file.uploadDeleteUrl"
