TM-11464 Fix issue causing task notes was not taking all available height

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -2,6 +2,7 @@
   .modal-content
     min-height: 679px
     min-width: 769px
+    display: inline-block
     .modal-body
       height: 86%
       .task-layout
@@ -9,6 +10,7 @@
         flex-direction: column
       .full-height
         height: 100%
+        display: inline-flex
       .grow-container
         display: flex
         flex: 1
