TM-10809 Attending QA comments
Closing view pressing esc key
Set a default value for team selected

--- a/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in add-person-component" id="add-person-component" data-backdrop="static" tabindex="0" role="dialog">
+<div tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal fade in add-person-component" id="add-person-component" data-backdrop="static" tabindex="0" role="dialog">
     <div class="modal-dialog modal-md" role="document">
         <div class="modal-content">
             <div class="modal-header">
