TM-12036 Update Assignments

--- a/web-app/css/page/module/assets/dependencyAnalyzer.sass
+++ b/web-app/css/page/module/assets/dependencyAnalyzer.sass
@@ -165,6 +165,13 @@ div.content-wrapper
         #tmHighlightGroupSelector
           vertical-align: top
           display: inline-block
+// Only on this page, but the dialog is opened out of the existing container
+#tmAssignmentTagSelector
+  vertical-align: top
+  display: inline-block
+  div.asset-tag-selector-component
+    .k-widget
+      width: 200px
 // styles the person highlighting kendo listbox
 #personHighlightSelectId_listbox *
   cursor: pointer
