--- a/web-app/css/elements/support/jqgrid.sass
+++ b/web-app/css/elements/support/jqgrid.sass
@@ -45,6 +45,10 @@ div.content-wrapper
               span
                 box-sizing: initial !important
               div.asset-tag-selector-component-content
+                display: flex
+                flex-direction: row
+                flex-wrap: wrap
                 span
+                  max-width: fit-content
                   height: 20px
                   margin-top: 3px
