TM-11703 Open task edit details view

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -264,6 +264,11 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
+                <button class="btn btn-primary pull-left"
+                        (click)="editTaskDetail()" type="button">
+                    <span  class="glyphicon glyphicon-pencil"></span>
+                    <span>Edit</span>
+                </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Close</span>
