--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-detail-component" data-backdrop="static" tabindex="-1" role="dialog">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
@@ -10,7 +10,7 @@
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title">{{taskDetailModel.modal.title}}</h4>
+                <h4 class="modal-title">Edit: {{taskDetailModel.modal.title}}</h4>
             </div>
             <div class="modal-body">
                 <div class="full-height">
@@ -264,6 +264,11 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
+	            <button class="btn btn-primary pull-left"
+	                    (click)="editTaskDetail()" type="button">
+		            <span  class="glyphicon glyphicon-pencil"></span>
+		            <span>Edit</span>
+	            </button>
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Cancel</span>
